Updating the support (#210)
* Updating the support